web_external/stylesheets/layout.styl
@import 'nib'

$headerHeight = 54px
$portraitHeight = 38px

.h-header-wrapper
  height $headerHeight
  padding-right 20px
  padding-left 20px
  background-color rgba(80, 80, 80, 0.88)
  color white
  border-bottom 1px solid #e6e6e6
  transition background-color 0.4s ease-in-out
  position fixed
  top 0
  width 100%
  z-index 10

  a
    color white

  a:hover
    color rgb(180, 180, 180)

  &:hover
    background-color rgba(30, 30, 30, 0.88)

  .h-user-link
    font-size 16px

  .h-login-link-wrapper
    font-size 16px

  .h-user-link-wrapper
    display inline-block

  .h-portrait-wrapper
    border-radius 50%
    display inline-block
    margin-right 10px
    background-color #d6d6d6
    height $portraitHeight
    width $portraitHeight
    background-size $portraitHeight $portraitHeight

  .h-current-user-text > *
    vertical-align middle
    line-height $headerHeight

  .h-current-user-wrapper
    float right

  .h-icons-wrapper
    display inline
    line-height $headerHeight
    font-size 21px

    &>a
      color #444
      margin-right 4px
      border 1px solid transparent
      border-radius 3px
      padding 3px


#wrapper
    padding-left 0
    -webkit-transition all 0.5s ease
    -moz-transition all 0.5s ease
    -o-transition all 0.5s ease
    transition all 0.5s ease

#wrapper.toggled
    padding-left 250px

#sidebar-wrapper
    z-index 1000
    position fixed
    left 250px
    width 0
    height 100%
    margin-left -250px
    overflow-y auto
    // background #fff
    -webkit-transition all 0.5s ease
    -moz-transition all 0.5s ease
    -o-transition all 0.5s ease
    transition all 0.5s ease
    border-right 1px solid #e6e6e6

#im-app-user-data-container
    padding 15px
    padding-bottom $headerHeight

#wrapper.toggled #sidebar-wrapper
    width 250px

#page-content-wrapper
    width 100%
    position absolute
    padding 15px
    padding-bottom $headerHeight

#wrapper.toggled #page-content-wrapper
    position absolute
    margin-right -250px


@media(min-width:768px) {
    #wrapper {
        padding-left: 250px;
    }

    #wrapper.toggled {
        padding-left: 0;
    }

    #sidebar-wrapper {
        width: 250px;
    }

    #wrapper.toggled #sidebar-wrapper {
        width: 0;
    }

    #page-content-wrapper {
        padding: 20px;
        position: relative;
    }

    #wrapper.toggled #page-content-wrapper {
        position: relative;
        margin-right: 0;
    }
}

.im-searches
    padding-top 5px
    padding-bottom 20px

.im-brand
    padding-top 14px
    padding-bottom 10px
    padding-right 20px
    font-size 20px
    float left

.im-search-form
    padding-top 10px
    padding-bottom 10px
    width 60%
    float left

#im-app-main-container
    margin 0
    margin-top $headerHeight
    min-height 0
    padding 12px 15px

#g-app-body-container
    margin 0
    min-height 0
    padding 12px 15px

#im-upload
    padding 20px 20px
    margin-bottom 20px

.im-actions
    padding-top 30px

.im-attributes
    padding-top 20px

img.im-image-thumbnail
    height 100px

img.im-image-detail
    height 250px

img.im-blur
    -webkit-filter blur(10px)
    filter blur(10px)

img.im-blur:hover
    -webkit-filter blur(0px)
    filter blur(0px)

.im-caption
    height 70px
    overflow scroll
    margin-top 10px

